# searobotics_surveyor

./: .gitignore  pyproject.toml
simulators/: README.md  boat_simulator.py  grid_config.json  test_grid_nav.py  test_waypoints.py
surveyor_lib/: surveyor.py
surveyor_lib/clients/: camera_client.py  exo2_client.py
surveyor_lib/helpers/: grid_helper.py  read_save_helper.py  surveyor_messages_helper.py  waypoint_helper.py
surveyor_lib/servers/: camera_server.py  exo2_server.py  lidar_server.py  lidar_server_simple.py  lidar_wrapper.py  port_selector.py
tests/: test_exo2_client.py
visualizers/: gui_plot.py  term_viz.py
